--- a/css/arreglos.css
+++ b/css/arreglos.css
@@ -69,3 +69,8 @@ nav.sidebar{
 iframe.tam{
     min-height: 450px;
 }
+/*
+button.btn{
+    background-color: #457b9d;
+    border-color: 457b9d;
+}*/
